# mayadashboard

./: .cache_ggshield  .gitignore  AGY_DASHBOARD_LIVE_WORKFLOW.md  README.md  agy_automate.py  dashboard.py  main.py  pyproject.toml  requirements.txt  run.bat  settings.json.example
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-06-17-lessons-tab-w3schools-design.md
intel/: __init__.py  agy_parser.py  context_builder.py  gmail_poller.py  project_scanner.py
