[project]
name = "antigravitydashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=6.0.0",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "pywinpty>=3.0.5",
    "tkinterweb>=4.25.3",
]
